@@ -2,6 +2,7 @@ package org.example.api.controller;
 
 import org.example.api.dto.StreamDetailsDTO;
 import org.example.api.dto.dash.DashManifestConfigDTO;
+import org.example.api.exception.NoStreamsAvailableException;
 import org.example.api.service.DashManifestGeneratorService;
 import org.example.api.service.VideoStreamingService;
 import org.example.api.service.StreamSelectionService;
@@ -11,7 +12,6 @@ import org.schabi.newpipe.extractor.InfoItem;
 import org.schabi.newpipe.extractor.stream.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -60,8 +60,8 @@ public class StreamingController {
      *         or an error response from the exception handler.
      */
     @GetMapping
-    public ResponseEntity<StreamInfo> getStreamInfo(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving stream info for ID: {}", id);
+    public ResponseEntity<StreamInfo> getStreamInfo(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving stream info for ID: {}", id);
 
         StreamInfo info = videoStreamingService.getStreamInfo(videoUrl(id));
         return ResponseEntity.ok(info);
@@ -71,8 +71,8 @@ public class StreamingController {
      * Get audio streams for a video.
      */
     @GetMapping("/audio")
-    public ResponseEntity<List<AudioStream>> getAudioStreams(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving audio stream for ID: {}", id);
+    public ResponseEntity<List<AudioStream>> getAudioStreams(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving audio stream for ID: {}", id);
 
         List<AudioStream> streams = videoStreamingService.getAudioStreams(videoUrl(id));
         return ResponseEntity.ok(streams);
@@ -82,8 +82,8 @@ public class StreamingController {
      * Get video-only streams.
      */
     @GetMapping("/video")
-    public ResponseEntity<List<VideoStream>> getVideoStreams(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving video stream for ID: {}", id);
+    public ResponseEntity<List<VideoStream>> getVideoStreams(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving video stream for ID: {}", id);
 
         List<VideoStream> streams = videoStreamingService.getVideoStreams(videoUrl(id));
         return ResponseEntity.ok(streams);
@@ -93,8 +93,8 @@ public class StreamingController {
      * Get DASH MPD URL for adaptive streaming.
      */
     @GetMapping("/video/dash")
-    public ResponseEntity<String> getDashMpdUrl(@RequestParam(name = "id", required = true) String id) throws Exception {
-        logger.info("Retrieving DASH MPD URL for ID: {}", id);
+    public ResponseEntity<String> getDashMpdUrl(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving DASH MPD URL for ID: {}", id);
 
         String dashUrl = videoStreamingService.getDashMpdUrl(videoUrl(id));
         return ResponseEntity.ok(dashUrl);
@@ -104,36 +104,33 @@ public class StreamingController {
      * Get DASH MPD XML Manifest for adaptive bitrate streaming
      */
     @GetMapping("/dash")
-    public ResponseEntity<String> getDashManifest(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Generating optimized DASH manifest for ID: {}", id);
+    public ResponseEntity<String> getDashManifest(@RequestParam(name = "id") String id) {
+        logger.debug("Generating optimized DASH manifest for ID: {}", id);
 
         String url = videoUrl(id);
 
-        // Get full stream information from NewPipe Extractor
         StreamInfo streamInfo = videoStreamingService.getStreamInfo(url);
 
-        // Get ALL available streams
         List<VideoStream> allVideoStreams = streamInfo.getVideoOnlyStreams();
         List<AudioStream> allAudioStreams = streamInfo.getAudioStreams();
         List<SubtitlesStream> allSubtitles = streamInfo.getSubtitles();
-
-        logger.info("Retrieved {} video, {} audio, {} subtitle streams",
-                allVideoStreams.size(), allAudioStreams.size(), allSubtitles.size());
 
         // SABR fallback: if adaptive streams are unavailable, use muxed streams (360p only)
         boolean isMuxedFallback = allVideoStreams.isEmpty();
 
         if (isMuxedFallback) {
             List<VideoStream> muxedStreams = streamInfo.getVideoStreams();
-            logger.warn("No adaptive streams available for ID: {} - falling back to {} muxed stream(s)", id, muxedStreams.size());
 
             if (muxedStreams.isEmpty()) {
-                logger.error("No streams available for ID: {}", id);
-                return ResponseEntity.status(HttpStatus.SERVICE_UNAVAILABLE).body("No streams available: YouTube may be blocking extraction for this video.");
+                throw new NoStreamsAvailableException(
+                        "No streams available — YouTube may be blocking extraction for this video"
+                );
             }
 
-            // Return the direct URL as plain text with a custom header
-            String directUrl = muxedStreams.get(0).getContent();
+            logger.warn("No adaptive streams - falling back to {} muxed stream(s)", muxedStreams.size());
+
+            String directUrl = muxedStreams.getFirst().getContent();
+            // TODO: Replace X-STREAM-TYPE header with a standardized header from MDN
             return ResponseEntity.ok()
                     .contentType(MediaType.TEXT_PLAIN)
                     .header("X-Stream-Type", "muxed-progressive")
@@ -145,11 +142,6 @@ public class StreamingController {
         List<AudioStream> selectedAudioStreams = streamSelectionService.selectAudioStreams(allAudioStreams);
         List<SubtitlesStream> selectedSubtitles = streamSelectionService.selectSubtitles(allSubtitles);
 
-        // Log selection results for debugging
-        streamSelectionService.logSelectedStreams(selectedVideoStreams, selectedAudioStreams);
-        streamSelectionService.logSelectedSubtitles(selectedSubtitles);
-
-        // Build config from selected streams
         DashManifestConfigDTO config = DashManifestConfigDTO.fromWithSelectedStreams(
                 streamInfo,
                 selectedVideoStreams,
@@ -160,7 +152,7 @@ public class StreamingController {
         // Generate manifest XML with selected streams
         String manifest = dashManifestGeneratorService.generateManifestXml(config);
 
-        logger.info("Generated optimized DASH manifest with {} characters (selected streams: {} video, {} audio, {} subtitle)",
+        logger.debug("Generated optimized DASH manifest with {} characters (selected streams: {} video, {} audio, {} subtitle)",
                 manifest.length(), selectedVideoStreams.size(), selectedAudioStreams.size(), selectedSubtitles.size());
 
         return ResponseEntity.ok()
@@ -172,8 +164,8 @@ public class StreamingController {
      * Get stream thumbnails
      */
     @GetMapping("/thumbnails")
-    public ResponseEntity<List<Image>> getThumbnails(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving stream thumbnails for ID: {}", id);
+    public ResponseEntity<List<Image>> getThumbnails(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving stream thumbnails for ID: {}", id);
 
         List<Image> thumbnails = videoStreamingService.getStreamThumbnails(videoUrl(id));
         return ResponseEntity.ok(thumbnails);
@@ -183,8 +175,8 @@ public class StreamingController {
      * Get subtitle streams.
      */
     @GetMapping("/subtitles")
-    public ResponseEntity<List<SubtitlesStream>> getSubtitleStreams(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving subtitle streams for ID: {}", id);
+    public ResponseEntity<List<SubtitlesStream>> getSubtitleStreams(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving subtitle streams for ID: {}", id);
 
         List<SubtitlesStream> subtitles = videoStreamingService.getSubtitleStreams(videoUrl(id));
         return ResponseEntity.ok(subtitles);
@@ -194,8 +186,8 @@ public class StreamingController {
      * Get stream segments (chapters).
      */
     @GetMapping("/segments")
-    public ResponseEntity<List<StreamSegment>> getStreamSegments(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving stream segments for ID: {}", id);
+    public ResponseEntity<List<StreamSegment>> getStreamSegments(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving stream segments for ID: {}", id);
 
         List<StreamSegment> segments = videoStreamingService.getStreamSegments(videoUrl(id));
         return ResponseEntity.ok(segments);
@@ -205,8 +197,8 @@ public class StreamingController {
      * Get preview frames for video scrubbing.
      */
     @GetMapping("/preview-frames")
-    public ResponseEntity<List<Frameset>> getPreviewFrames(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving preview frames stream for ID: {}", id);
+    public ResponseEntity<List<Frameset>> getPreviewFrames(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving preview frames stream for ID: {}", id);
 
         List<Frameset> frames = videoStreamingService.getPreviewFrames(videoUrl(id));
         return ResponseEntity.ok(frames);
@@ -216,8 +208,8 @@ public class StreamingController {
      * Get stream description.
      */
     @GetMapping("/description")
-    public ResponseEntity<Description> getStreamDescription(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving description stream for ID: {}", id);
+    public ResponseEntity<Description> getStreamDescription(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving description stream for ID: {}", id);
 
         Description description = videoStreamingService.getStreamDescription(videoUrl(id));
         return ResponseEntity.ok(description);
@@ -227,8 +219,8 @@ public class StreamingController {
      * Get comprehensive stream details (metadata).
      */
     @GetMapping("/details")
-    public ResponseEntity<StreamDetailsDTO> getStreamDetails(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving stream details for ID: {}", id);
+    public ResponseEntity<StreamDetailsDTO> getStreamDetails(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving stream details for ID: {}", id);
 
         StreamInfo info = videoStreamingService.getStreamInfo(videoUrl(id));
         StreamDetailsDTO details = StreamDetailsDTO.from(info);
@@ -240,8 +232,8 @@ public class StreamingController {
      * Get related videos/streams.
      */
     @GetMapping("/related")
-    public ResponseEntity<List<InfoItem>> getRelatedStreams(@RequestParam(name = "id", required = true) String id) {
-        logger.info("Retrieving related streams for ID: {}", id);
+    public ResponseEntity<List<InfoItem>> getRelatedStreams(@RequestParam(name = "id") String id) {
+        logger.debug("Retrieving related streams for ID: {}", id);
 
         List<InfoItem> relatedItems = videoStreamingService.getRelatedStreams(videoUrl(id));
         return ResponseEntity.ok(relatedItems);
